<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/loginTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:text="@string/login_as_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/doctorLoginTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loginTypeText"
        android:layout_alignBottom="@+id/loginTypeText"
        android:layout_toRightOf="@+id/loginTypeText"
        android:text="@string/nurse_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/create_visit_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/load_patient_records_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:onClick="create_visit_record"
        android:text="@string/Create_Visit_Record" />

    <Button
        android:id="@+id/update_visit_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_visit_record"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:onClick="update_visit_record"
        android:text="@string/Update_Visit_Record" />

    <Button
        android:id="@+id/view_visit_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_visit_record"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:onClick="view_visit_record"
        android:text="@string/View_Visit_Record" />

    <Button
        android:id="@+id/backToLoginFromNurse"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="load_loginActivity"
        android:text="@string/backButtonText" />

    <Button
        android:id="@+id/load_patient_records_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:onClick="load_patient_records"
        android:text="@string/Patient_Records" />

    <Button
        android:id="@+id/patient_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_visit_record"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:onClick="view_patient_list"
        android:text="@string/patient_list" />

    <Button
        android:id="@+id/viewPrescriptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/patient_list_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:onClick="load_prescriptions"
        android:text="@string/view_prescription" />

</RelativeLayout>