<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UpdateExistingActivity" >

    <TextView
        android:id="@+id/updateVisitTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Update_Existing" />

    <EditText
        android:id="@+id/healthcard_number_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/updateVisitTextView"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/healthcard_number_field"
        android:inputType="number" >

    </EditText>

    <EditText
        android:id="@+id/temperature_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/healthcard_number_field"
        android:layout_alignRight="@+id/healthcard_number_field"
        android:layout_below="@+id/healthcard_number_field"
        android:layout_marginTop="33dp"
        android:hint="@string/temperature_field"
        android:inputType="number" />

    <EditText
        android:id="@+id/blood_pressure_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/temperature_field"
        android:layout_below="@+id/temperature_field"
        android:layout_marginTop="38dp"
        android:hint="@string/blood_pressure_field"
        android:inputType="text|number" />

    <EditText
        android:id="@+id/heart_rate_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/blood_pressure_field"
        android:layout_alignRight="@+id/blood_pressure_field"
        android:layout_below="@+id/blood_pressure_field"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/heart_rate_field"
        android:inputType="number" />

	<Button
	    android:id="@+id/backButtonFromUpdateVisit"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/updateVisitButton"
	    android:layout_alignBottom="@+id/updateVisitButton"
	    android:layout_alignRight="@+id/heart_rate_field"
	    android:layout_marginRight="22dp"
	    android:onClick="load_mainActivity"
	    android:text="@string/backButtonText" />

	<Button
	    android:id="@+id/updateVisitButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/heart_rate_field"
	    android:layout_alignParentBottom="true"
	    android:layout_marginLeft="16dp"
	    android:onClick="updateExisting"
	    android:text="@string/updateText" />

	<CheckBox
	    android:id="@+id/updateSeenByDoctorCheckBox"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/heart_rate_field"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="26dp"
	    android:text="@string/seen_by_doc" />
	
	<TextView
        android:id="@+id/updateStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/updateSeenByDoctorCheckBox"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
