<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.group0943.triage.PhysicianActivity" >

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/loginTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:text="@string/login_as_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/doctorLoginTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loginTypeText"
        android:layout_alignBottom="@+id/loginTypeText"
        android:layout_toRightOf="@+id/loginTypeText"
        android:text="@string/doctor_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/physicianCheckRecordsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:onClick="load_LookUpActivity"
        android:text="@string/Patient_Records" />

    <Button
        android:id="@+id/physicianRecordSymptoms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/physicianCheckRecordsButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:onClick="load_RecordSymptoms"
        android:text="@string/patient_symptoms" />

    <Button
        android:id="@+id/backToLoginFromPhysician"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="load_loginActivity"
        android:text="@string/backButtonText" />
    
</RelativeLayout>
