<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.group0943.triage.CreatePatientRecord" >

    <TextView
        android:id="@+id/createPatientRecordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/createPatientRecordText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/healthCardInputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/createPatientRecordText"
        android:layout_marginTop="30dp"
        android:text="@string/health_card_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/dobInputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nameInputText"
        android:layout_below="@+id/nameInputText"
        android:layout_marginTop="41dp"
        android:text="@string/date_of_birth_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/nameInputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/healthCardInputText"
        android:layout_below="@+id/healthCardInputText"
        android:layout_marginTop="42dp"
        android:text="@string/name_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/healthCardInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/healthCardInputText"
        android:layout_alignBottom="@+id/healthCardInputText"
        android:layout_toRightOf="@+id/healthCardInputText"
        android:ems="10"
        android:hint="@string/health_card_hint"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nameInputText"
        android:layout_alignBottom="@+id/nameInputText"
        android:layout_toRightOf="@+id/nameInputText"
        android:ems="10"
        android:hint="@string/name_hint" />

    <EditText
        android:id="@+id/dobInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dobInputText"
        android:layout_alignBottom="@+id/dobInputText"
        android:layout_toRightOf="@+id/dobInputText"
        android:ems="10"
        android:hint="@string/date_of_birth_hint"
        android:inputType="date" />

    <Button
        android:id="@+id/createPatientRecordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dobInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:onClick="savePatientRecord"
        android:text="@string/createPatientRecordText" />

    <Button
        android:id="@+id/backButtonCreatePatientRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/dobInput"
        android:layout_marginBottom="24dp"
        android:onClick="back_to_patient_records"
        android:text="@string/backButtonText" />

    <TextView
        android:id="@+id/createNotificationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dobInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="-------"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
