<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.group0943.triage.LookUpPatientActivity" >

	<TextView
        android:id="@+id/patientData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/patient_data_header"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editHealthCardNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/patientData"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/health_card_hint"
        android:inputType="number" />

    <Button
        android:id="@+id/loadPatientDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editHealthCardNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:onClick="displayPatientData"
        android:text="@string/load_patient_data" />

    <TextView
        android:id="@+id/healthCardText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/loadPatientDataButton"
        android:layout_marginTop="23dp"
        android:text="@string/health_card_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/dobText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nameInputText"
        android:layout_below="@+id/nameInputText"
        android:layout_marginTop="30dp"
        android:text="@string/date_of_birth_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/nameInputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/healthCardText"
        android:layout_below="@+id/healthCardText"
        android:layout_marginTop="29dp"
        android:text="@string/name_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/patient_health_card_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nameInputText"
        android:layout_toRightOf="@+id/dobText"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/patient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dobText"
        android:layout_toRightOf="@+id/nameInputText"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/patient_dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/dobText"
        android:layout_alignLeft="@+id/patient_health_card_number"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/patientDoesNotExistWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dobText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/backButtonFromLoadRecords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:layout_toRightOf="@+id/patientData"
        android:onClick="load_PhysicianMainScreen"
        android:text="@string/backButtonText" />

    <Button
        android:id="@+id/loadVitalsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/backButtonFromLoadRecords"
        android:layout_alignLeft="@+id/editHealthCardNumber"
        android:onClick="load_vitals"
        android:text="@string/load_vitals" />

</RelativeLayout>
